--- a/docs/ch3.ipynb
+++ b/docs/ch3.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We get a significant effect ($p < .05$)\n",
+    "\n",
     "$\\alpha + \\beta \\to \\gamma$"
    ]
   },
