--- a/docs/ch3.ipynb
+++ b/docs/ch3.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "We get a significant effect ($p < .05$)\n",
     "\n",
-    "$\\alpha + \\beta \\to \\gamma$"
+    "\\(\\alpha + \\beta \\to \\gamma\\)"
    ]
   },
   {
