--- a/docs/ch3.ipynb
+++ b/docs/ch3.ipynb
@@ -13,7 +13,10 @@
    "source": [
     "We get a significant effect ($p < .05$)\n",
     "\n",
-    "$$\\alpha + \\beta \\to \\gamma$$"
+    "$$\\alpha + \\beta \\to \\gamma$$\n",
+    "\n",
+    "\n",
+    "Give a more complex example $\\begin{pmatrix} \\theta \\\\ \\zeta \\end{pmatrix} = N \\left( \\begin{pmatrix} 0 \\\\ 0 \\end{pmatrix}, \\begin{pmatrix} 1 & \\rho \\\\ \\rho & 1 \\end{pmatrix} \\right)$"
    ]
   },
   {
