--- a/docs/2025W30.ipynb
+++ b/docs/2025W30.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGvar6Gs5xefwIAHNBTHk9"
+      "authorship_tag": "ABX9TyOljc4Ydb0DQwnxOK8RPzpe",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "ir",
@@ -17,9 +18,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jiewenTsai/popcorn/blob/main/docs/2025W30.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "\n",
-        "## 0721\n",
+        "# 0721\n",
         "\n",
         "### Problem\n",
         "\n",
@@ -465,7 +476,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 0722\n",
+        "# 0722\n",
         "\n",
         "\n",
         "### Problem\n",
