--- a/docs/2025W30.ipynb
+++ b/docs/2025W30.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOljc4Ydb0DQwnxOK8RPzpe",
-      "include_colab_link": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNtSQ+NUyOGZdG8Xb1QEUXt"
     },
     "kernelspec": {
       "name": "ir",
@@ -16,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jiewenTsai/popcorn/blob/main/docs/2025W30.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -500,10 +490,37 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 0723"
+      ],
+      "metadata": {
+        "id": "7bA6QC9Sss2J"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "jbE9tiBXmQlM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 0724"
+      ],
+      "metadata": {
+        "id": "wwxhyJuvswP2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jqhMJXZ0syLL"
       },
       "execution_count": null,
       "outputs": []
