--- a/docs/20250901_R_Performance_Benchmark_Results.ipynb
+++ b/docs/20250901_R_Performance_Benchmark_Results.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM46cHC5ggsBxUhF+1Es6o8",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOTbxJU3lUcvl3F3uPmGK8z"
     },
     "kernelspec": {
       "name": "ir",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jiewenTsai/jelly/blob/main/docs/2025_09_01_R_Performance_Benchmark_Results.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -94,7 +83,7 @@
         "\n",
         "## ⚠️ 重要提醒：R 安裝方式的影響\n",
         "\n",
-        "千萬注意，在蘋果系統上安裝 R 時，一定要從 CRAN 上去下載，千萬不要用 Homebrew。Homebrew 的版本可能會非常慢。例如，同樣 M3 的機器，使用 Homebrew 安裝的 R 需要 1.4 分鐘，但 CRAN 官方版本只需要 33.76 秒，效能差異高達 2.5 倍。\n",
+        "千萬注意，在蘋果系統上安裝 R 時，一定要從 CRAN 上去下載，千萬不要用 Homebrew。Homebrew 的版本可能會非常慢。例如，同樣 M4 的機器，使用 Homebrew 安裝的 R 需要 1.4 分鐘，但 CRAN 官方版本只需要 33.76 秒，效能差異高達 2.5 倍。\n",
         "\n",
         "這個差異主要是因為 Homebrew 版本缺乏針對 Apple Silicon 的優化，而 CRAN 官方版本則充分利用了硬體的性能特性。因此 macOS 用戶務必從 [CRAN](https://cran.r-project.org/) 下載官方版本。\n",
         "\n",
