--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -1,23 +1,31 @@
 
-# 單純使用 `.md` 與 `.ipynb` 格式寫作的最小可行方案
+# 用 colab 當編輯器，用 readthedocs 部署的最小可行寫作方案
 
 
 - JW
+- 2025-09-01
 - 2024-02-16
 
+原文：單純使用 `.md` 與 `.ipynb` 格式寫作的最小可行方案
 
-**需求**：我只想單純使用 .md 紀錄純文字、簡單的數學式 (支援 latex)、表格與程式。如果需要有執行結果的，則用 .ipynb 的檔案來紀錄和執行。最後，只需要最非常簡單的事情，甚至不用轉檔，就可以彙整。
+
+## Problem.
+
+你想用 colab 作為編輯器（因為可用 md, ipynb, 可支援 python, r, julia）。寫好後直接上傳到 github 
+
+你想單純使用 .md 紀錄純文字、簡單的數學式 (支援 latex)、表格與程式。如果需要有執行結果的，則用 .ipynb 的檔案來紀錄和執行。最後，只需要最非常簡單的事情，甚至不用轉檔，就可以彙整。
 （我這麼說，就是因為 [`Quarto`](https://quarto.org/) 也很好用，但他是要轉檔。）
 
 一種最小可行方案：`mkdocs`，並部署在 `readthedocs` 上面。
 
 
-## 使用 mkdocs
+## Solution.
+使用 colab 當編輯器，用 github 當後台，用 mkdocs 當引擎，用 readthedos 當部署。
 
 
-### Install
+#### Step 1. Install MkDocs
 
-在 mac 系統上，用 homebrew 就可以了。
+安裝方式，在 mac 系統上，用 homebrew 就可以了。
 
 ```
 # general
@@ -33,9 +41,10 @@ brew install mkdocs-material
 pip install mkdocs
 ```
 
-### Usage
+#### Step 2. Usage
 
 使用上，就按照官網指示：
+建立一個新資料夾。
 
 ```
 # create a new project
@@ -48,15 +57,12 @@ cd my-project
 mkdocs serve
 ```
 
-### Add Files
+#### Step 3. Add Files
 
 - 使用 markdown 檔案應該是基本可行的。
 - 使用 jupyter 檔案則加上外掛就可行。（如下節所示）
 
-## 設定 mkdocs
-
-### Add a `requirement.txt` in the docs file
-
+_Step 3.1._ Add a `requirement.txt` in the docs file,
 這一步是為了安裝所需要的 python 套件。例子：
 
 ```
@@ -66,7 +72,7 @@ mkdocs-material
 ```
 
 
-### Add a `.readthedocs.yaml` in the file
+_Step 3.2._ Add a `.readthedocs.yaml` in the file
 
 這是上傳到 readthedocs 上時會需要的。通常部署時參考他建議的寫法就行。例子：
 
@@ -92,15 +98,13 @@ python:
   - requirements: docs/requirements.txt
 ```
 
-### change your `mkdocs.yml`
+#### Step 4. change your `mkdocs.yml`
 
 最後，就是修改 `mkdocs.yml` 中的設定。
 因為本文目標是「最小可行」，因此就是字型什麼幾乎不改，目錄也不改，都用預設值。唯二需要增加的是：
 
 - latex 語法支援。詳細設定方式請參考 [Material for MkDocs - Math](https://squidfunk.github.io/mkdocs-material/reference/math/)
 - jupyter 格式支援。在 plugins 加入 `- mkdocs-jupyter`。
-
-
 
 例子：
 
@@ -135,15 +139,39 @@ plugins:
 
 關於 markdown_extensions 可以寫什麼，可以參考 [Material for MkDocs - Python Markdown Extensions](https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown-extensions/#highlight)
 
-## 部署到 readthedocs
+#### Step 5. 部署到 [readthedocs](https://readsthedocs.com/)
 
 完成之後，只需要再做二步：
 
 1. 把這個資料夾上傳到 Github 上面。
 2. 登入 readthedocs，連結你的 github。選擇這個 repo，然後發佈即可。
+3. 在部署選項上，記得要勾 `mkdocs`!!
+4. 部署好，網址就會是 `xxxxx.readthedocs.io/` 非常方便好記。
 
 
 ---
 
 現在，一個簡單而基本可行的介面已經完成了！
 接下來只需要把你的 markdown 和 jupyter 檔案無腦放入 `docs` 資料夾中上傳即可！
+
+
+#### Step 6. COLAB 使用方式
+
+1. 在 google drive 開啟一個 colab 檔案。
+2. 完成你的 md 或是 r, pyhton, julia 作業。
+3. 選擇 `File/Save a copy in Github`, 接著選你要存放的 repo.
+4. 這時候檔名前面記得要加 `docs/` 因為要存到該 repo 的 docs 資料夾中。
+5. 檔案命名方式，前面記得加上日期，例如 `20250901_xxxxx.ipynb` 這樣有利於 mkdocs 自動按日期順序排版。
+
+## Discussion
+
+
+
+## See Also
+
+- [MkDcos](https://www.mkdocs.org/)
+- [Quarto](https://quarto.org/)
+- [readthedocs](https://readsthedocs.com/)
+
+
+
