--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -1,5 +1,5 @@
 
-# 用 colab 當編輯器，用 readthedocs 部署的最小可行寫作方案
+# 一種半自動的最小可行寫作方案
 
 
 - JW
@@ -11,13 +11,18 @@
 
 ## Problem.
 
-你想用 colab 作為編輯器（因為可用 md, ipynb, 可支援 python, r, julia）。寫好後直接上傳到 github 
+你想用一個簡單隨手可得的編輯器（例如 colab，因為可用 md, ipynb, 可支援 python, r, julia），並且寫好後可以一鍵發佈。
+
 
 你想單純使用 .md 紀錄純文字、簡單的數學式 (支援 latex)、表格與程式。如果需要有執行結果的，則用 .ipynb 的檔案來紀錄和執行。最後，只需要最非常簡單的事情，甚至不用轉檔，就可以彙整。
-（我這麼說，就是因為 [`Quarto`](https://quarto.org/) 也很好用，但他是要轉檔。）
 
-一種最小可行方案：`mkdocs`，並部署在 `readthedocs` 上面。
+我這麼說，就是因為 [`Quarto`](https://quarto.org/) 也很好用，但他是要轉檔。quarto 在 rstudio 上寫好後，也是可以一鍵發布到 [Quarto Pub](https://quartopub.com/) 上面。
+而且可調整性更高。
+但是他就是還是需要安裝 r, rstudio, quarto 等軟體，而且主要是在本機上寫，比較難跨機器。如果只是想做簡單編輯、改幾個字，還得大費周章開啟 rstudio.
 
+一種最小可行方案： `mk`/`ipynb` -->  Github --> `mkdocs` --> `readthedocs` 。
+
+這種方法的好處是，編輯器取得非常容易。只要在 google drive 中開啟即可。或是在 github 上直接寫 md. 後續的事只要第一次設定好，基本就是**半自動**了。
 
 ## Solution.
 使用 colab 當編輯器，用 github 當後台，用 mkdocs 當引擎，用 readthedos 當部署。
@@ -141,7 +146,7 @@ plugins:
 
 #### Step 5. 部署到 [readthedocs](https://readsthedocs.com/)
 
-完成之後，只需要再做二步：
+完成之後，只需要再做幾件事：
 
 1. 把這個資料夾上傳到 Github 上面。
 2. 登入 readthedocs，連結你的 github。選擇這個 repo，然後發佈即可。
@@ -149,13 +154,11 @@ plugins:
 4. 部署好，網址就會是 `xxxxx.readthedocs.io/` 非常方便好記。
 
 
----
-
 現在，一個簡單而基本可行的介面已經完成了！
 接下來只需要把你的 markdown 和 jupyter 檔案無腦放入 `docs` 資料夾中上傳即可！
 
 
-#### Step 6. COLAB 使用方式
+#### Step 6.1. COLAB 使用方式
 
 1. 在 google drive 開啟一個 colab 檔案。
 2. 完成你的 md 或是 r, pyhton, julia 作業。
@@ -163,9 +166,20 @@ plugins:
 4. 這時候檔名前面記得要加 `docs/` 因為要存到該 repo 的 docs 資料夾中。
 5. 檔案命名方式，前面記得加上日期，例如 `20250901_xxxxx.ipynb` 這樣有利於 mkdocs 自動按日期順序排版。
 
+#### Step 6.2. 當然也可以使用 GITHUB 
+
+github 的話，就是直接編輯 markdown 檔案。
+
+
 ## Discussion
 
+這套半自動寫作方案的核心概念是「降低進入門檻」。相較於 Quarto 需要完整的本機開發環境，這個方案只需要瀏覽器就能開始寫作。特別適合需要跨裝置工作、或是偶爾想修改幾個字但不想開啟重型軟體的情況。
 
+當然，這個方案也有取捨。在客製化和進階功能上不如 Quarto 豐富，但對於大多數的學術寫作、筆記整理、或是簡單的技術文件來說已經足夠。重點是一旦設定完成，後續的發布流程幾乎是透明的——寫完就直接同步到網站上。
+
+另一個意外的好處是版本控制。由於所有內容都在 GitHub 上，自然就有了完整的修改歷史記錄，這在傳統的文件編輯軟體中往往需要額外設定。
+
+對於習慣用 Colab 做資料分析的研究者來說，這個方案讓寫作和分析可以在同一個環境中完成，減少了工具切換的成本。
 
 ## See Also
 
