--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -165,6 +165,7 @@ plugins:
 3. 選擇 `File/Save a copy in Github`, 接著選你要存放的 repo.
 4. 這時候檔名前面記得要加 `docs/` 因為要存到該 repo 的 docs 資料夾中。
 5. 檔案命名方式，前面記得加上日期，例如 `20250901_xxxxx.ipynb` 這樣有利於 mkdocs 自動按日期順序排版。
+6. 萬一有相同日期，就在後面加上數字，例如 2024021401, 2024021402, ...
 
 #### Step 6.2. 當然也可以使用 GITHUB 
 
