--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -62,7 +62,7 @@ cd my-project
 mkdocs serve
 ```
 
-#### Step 3. Add Files
+#### Step 3.  Add Files
 
 - 使用 markdown 檔案應該是基本可行的。
 - 使用 jupyter 檔案則加上外掛就可行。（如下節所示）
@@ -103,7 +103,7 @@ python:
   - requirements: docs/requirements.txt
 ```
 
-#### Step 4. change your `mkdocs.yml`
+_Step 3.3._ change your `mkdocs.yml`
 
 最後，就是修改 `mkdocs.yml` 中的設定。
 因為本文目標是「最小可行」，因此就是字型什麼幾乎不改，目錄也不改，都用預設值。唯二需要增加的是：
@@ -143,6 +143,14 @@ plugins:
 
 
 關於 markdown_extensions 可以寫什麼，可以參考 [Material for MkDocs - Python Markdown Extensions](https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown-extensions/#highlight)
+
+
+#### Step 4. 上傳到 GITHUB
+
+這邊可以用任何你知道的方法，把本機的資料夾上傳到 Github 上面。只需這一次就好。後面的步驟，都是在線上操作，基本上不需要碰到本機的資料夾。
+
+- Github Desktop.
+
 
 #### Step 5. 部署到 [readthedocs](https://readsthedocs.com/)
 
