--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -182,7 +182,8 @@ github 的話，就是直接編輯 markdown 檔案。
 
 ## Discussion
 
-這套半自動寫作方案的核心概念是「降低進入門檻」。相較於 Quarto 需要完整的本機開發環境，這個方案只需要瀏覽器就能開始寫作。特別適合需要跨裝置工作、或是偶爾想修改幾個字但不想開啟重型軟體的情況。
+這套半自動寫作方案的核心概念是「降低進入門檻」。降低進入門檻的理由，並不完全是技術上的原因。如果要講步驟簡單，依賴工具少，那可能 Quarto 是更好的選擇。對我而言更重要的原因是有利於「原子習慣」的養成。
+相較於 Quarto 需要完整的本機開發環境，這個方案只需要瀏覽器就能開始寫作。特別適合需要跨裝置工作、或是偶爾想修改幾個字但不想開啟重型軟體的情況。這樣簡單的方式有利於習慣建立。
 
 當然，這個方案也有取捨。在客製化和進階功能上不如 Quarto 豐富，但對於大多數的學術寫作、筆記整理、或是簡單的技術文件來說已經足夠。重點是一旦設定完成，後續的發布流程幾乎是透明的——寫完就直接同步到網站上。
 
