--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -20,7 +20,7 @@
 而且可調整性更高。
 但是他就是還是需要安裝 r, rstudio, quarto 等軟體，而且主要是在本機上寫，比較難跨機器。如果只是想做簡單編輯、改幾個字，還得大費周章開啟 rstudio.
 
-一種最小可行方案： `mk`/`ipynb` -->  Github --> `mkdocs` --> `readthedocs` 。
+一種最小可行方案： `mk`/`ipynb` -->  `github` --> `mkdocs` --> `readthedocs` 。
 
 這種方法的好處是，編輯器取得非常容易。只要在 google drive 中開啟即可。或是在 github 上直接寫 md. 後續的事只要第一次設定好，基本就是**半自動**了。
 
