--- a/docs/20240216_mvp.md
+++ b/docs/20240216_mvp.md
@@ -158,8 +158,9 @@ plugins:
 
 1. 把這個資料夾上傳到 Github 上面。
 2. 登入 readthedocs，連結你的 github。選擇這個 repo，然後發佈即可。
-3. 在部署選項上，記得要勾 `mkdocs`!!
-4. 部署好，網址就會是 `xxxxx.readthedocs.io/` 非常方便好記。
+3. 進入後的 NAME 要注意，他會變成這份文件網址的主要名稱。
+4. 在部署選項上，記得要改成 `MkDocs`!!
+5. 部署好，網址就會是 `xxxxx.readthedocs.io/` 非常方便好記。
 
 
 現在，一個簡單而基本可行的介面已經完成了！
