--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -1,47 +1,60 @@
-# 教育測量學期刊清單與投稿指南（2025年更新版）
+# 教育測量學期刊觀察清單
 
-- 2025-09-18
 - JW, Claude, Gemini
+- 2025-09-18
 
+
+## 前言與使用說明
+
+本指南彙整了教育測量與心理計量領域的重要期刊，依據期刊的學術聲望、理論貢獻與實務影響力進行分級。三星級期刊代表該領域的頂尖刊物，具有極高的學術地位與影響力；二星級期刊為該領域的重要刊物，兼具理論深度與實務價值；一星級期刊則偏重特定應用領域或新興議題。建議研究者根據自己的研究主題與職涯發展階段，選擇適合的投稿目標。
+
+---
 
 # 第一部分：計量方法學期刊 (Psychometric & Methodological Journals)
 
-這部分專門收錄那些更側重**統計理論、計量模型、方法學創新**的期刊，是計量領域的理論核心。
+這部分專門收錄那些更側重**統計理論、計量模式、方法學創新**的期刊，是計量領域的理論核心。這些期刊通常對數學統計的嚴謹性要求極高，適合具備深厚統計背景的研究者投稿。
 
 ## ⭐⭐⭐ 三星級 (頂級理論與高影響力期刊)
 
-#### 偏重理論創新
+### 偏重理論創新
 
-此類期刊是理論發展的驅動者，專注於發表奠基性、高度抽象的計量模型與統計理論，對數學和統計推導的要求極高。
+此類期刊是理論發展的驅動者，專注於發表奠基性、高度抽象的計量模式與統計理論，對數學和統計推導的要求極高。這些期刊的文章往往具有開創性，能夠影響整個領域的發展方向，適合資深研究者與理論工作者投稿。
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會                 | 年發行量         | 個人關注           | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ---------------- | -------------------- | ---------------- | ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [*Psychometrika*](https://www.cambridge.org/core/journals/psychometrika) (P11A) | Cambridge        | Psychometric Society | 4期 (約 40-50篇) | IRT, Bayes, NP, RT | 致力於將心理學發展為一門定量理性科學，是心理計量學理論發展的殿堂。 | 網絡心理計量學・高維度數據・機器學習應用・貝氏方法・項目反應理論 |
-| [*British Journal of Mathematical and Statistical Psychology*](https://bpspsychub.onlinelibrary.wiley.com/journal/20448317) (BMSP) | Wiley            | BPS                  | 3期 (約 20-30篇) | Bayes, RT          | 展示數學與統計心理學的最佳成果，透過數理方法促進心理學理解。 | 貝氏統計・認知模型・網絡分析・反應時間模型・縱貫數據分析     |
-| [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學數據收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫數據分析・機器學習方法・缺失資料・測量不變性   |
-| [Structural Equation Modeling](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模型（SEM）各個面向的論文，包含新技術、模型與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模型・潛在類別分析   |
-| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模型・心理計量網絡・機器學習・因素分析・結構方程模型     |
+| [*Psychometrika*](https://www.cambridge.org/core/journals/psychometrika) (P11A) | Cambridge        | Psychometric Society | 4期 (約 40-50篇) | IRT, Bayes, NP, RT | 致力於將心理學發展為一門定量理性科學，是心理計量學理論發展的殿堂。 | 網路心理計量學・高維度資料・機器學習應用・貝氏方法・試題反應理論 |
+| [*British Journal of Mathematical and Statistical Psychology*](https://bpspsychub.onlinelibrary.wiley.com/journal/20448317) (BMSP) | Wiley            | BPS                  | 3期 (約 20-30篇) | Bayes, RT          | 展示數學與統計心理學的最佳成果，透過數理方法促進心理學理解。 | 貝氏統計・認知模式・網路分析・反應時間模式・縱貫資料分析     |
+| [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學資料收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫資料分析・機器學習方法・遺漏資料・測量不變性   |
+| [Structural Equation Modeling](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
+| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
 
-#### 偏重方法與軟體
+**評述：** 這五本期刊堪稱心理計量學的「五大天王」，代表該領域的最高學術水準。*Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱；*Psychological Methods* 是APA體系中方法學的旗艦期刊；而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
 
-此類期刊是前沿研究方法的傳播中心，不僅發表創新的研究技術，也經常伴隨可供重現的軟體或程式碼，強調方法的可操作性與實用性。
+### 偏重方法與軟體
+
+此類期刊是前沿研究方法的傳播中心，不僅發表創新的研究技術，也經常伴隨可供重現的軟體或程式碼，強調方法的可操作性與實用性。這類期刊特別重視研究的可重複性與開放科學精神。
 
 | 期刊 (縮寫)                                                  | 出版社   | 學會                | 年發行量           | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | -------- | ------------------- | ------------------ | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Behavior Research Methods*](https://link.springer.com/journal/13428) (BRM) | Springer | Psychonomic Society | 6期 (約 180-240篇) | RT       | 刊登實驗心理學研究的方法、技術與工具性論文，特別強調電腦科技在研究中的應用。 | AI/機器學習・自然語言處理・R/Python套件・資料視覺化・線上實驗 |
 
-#### 理論與實務並重
+**評述：** *BRM* 在方法學期刊中具有獨特地位，它不僅是篇數最多的期刊之一，更是程式開發者和工具創建者的首選平台。該期刊特別歡迎附有開源程式碼的投稿，對於想要推廣自己開發的統計套件或研究工具的學者而言，這是最佳的發表平台。近年來隨著開放科學運動的興起，該期刊的重要性持續提升。
 
-此類期刊在理論嚴謹性與實務應用價值之間取得平衡，旨在將先進的計量方法應用於解決重要的教育與心理問題。
+### 理論與實務並重
+
+此類期刊在理論嚴謹性與實務應用價值之間取得平衡，旨在將先進的計量方法應用於解決重要的教育與心理問題。這類期刊通常要求文章既有理論貢獻，也要展現實際應用價值。
 
 | 期刊 (縮寫)                                                  | 出版社 | 學會       | 年發行量         | 個人關注  | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ------ | ---------- | ---------------- | --------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模型論文，強調文章的及時性與長期影響力。 | 認知診斷模型・教育中的因果推論・AI/機器學習應用・多層次模型・貝氏網絡 |
+| [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模式論文，強調文章的及時性與長期影響力。 | 認知診斷模式・教育中的因果推論・AI/機器學習應用・多層次模式・貝氏網路 |
 
+**評述：** *JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。
+
+---
 
 # 第二部分：教育與心理評量期刊 (Educational & Psychological Assessment Journals)
 
-這部分專門收錄側重**評量工具的開發、應用、實務與政策**的期刊，與教育和心理評量的實踐緊密相關。
+這部分專門收錄側重**評量工具的開發、應用、實務與政策**的期刊，與教育和心理評量的實踐緊密相關。相較於第一部分的理論導向，這些期刊更關注評量在實際情境中的應用與效果。
 
 ## ⭐⭐⭐ 三星級
 
@@ -49,27 +62,31 @@
 | ------------------------------------------------------------ | ------ | ---- | ---------------- | -------- | ------------------------------------------------------------ | -------------------------------------------------------- |
 | [*Psychological Assessment*](https://www.apa.org/pubs/journals/pas) (PAS) | APA    | APA  | 4期 (約 40-50篇) |          | APA 旗下在「評量」領域的權威期刊，專注於心理評量工具的發展、驗證與應用。 | 衡鑑工具發展・效度理論・臨床評估・測量不變性・診斷準確性 |
 
+**評述：** *PAS* 是心理評量領域的王牌期刊，由APA發行，在臨床心理學與諮商心理學界具有極高聲望。該期刊特別重視評量工具的嚴謹驗證過程，對效度證據的要求極為嚴格。對於從事心理測驗開發或衡鑑研究的學者而言，能在此期刊發表文章是學術成就的重要標誌。
+
 ## ⭐⭐ 二星級
 
-#### 理論與實務並重
+### 理論與實務並重
 
-此類期刊是評量領域的核心，涵蓋從測驗開發、效度驗證到評量政策等廣泛議題，是多數應用型研究者的主要投稿目標。
+此類期刊是評量領域的核心，涵蓋從測驗開發、效度驗證到評量政策等廣泛議題，是多數應用型研究者的主要投稿目標。這些期刊在學術品質與實務相關性之間取得良好平衡。
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測試應用   |
-| [Applied Psychological Measurement](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模型・測驗連結・電腦化適性測驗・個人適配度 |
-| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模型 |
+| [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測驗應用   |
+| [Applied Psychological Measurement](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模式・測驗連結・電腦化適性測驗・個人適配度 |
+| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模式 |
 | [Assessment in Education: Principles, Policy & Practice](https://www.tandfonline.com/journals/caie20) (AIE) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 關注評量的原則、政策與實務，以及它們之間的相互關係。         | 評量政策・形成性評量・學生中心評量・績效責任・促進學習的評量 |
 | [Journal of Psychoeducational Assessment](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
 | [Educational and Psychological Measurement](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
 | [Educational Assessment](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
 
+**評述：** 這組期刊構成了評量研究的主力軍，各有其特色定位。*EJPA* 代表歐洲觀點，在跨文化研究方面特別強勢；*APM* 和 *JEDM* 是IRT研究者的重要平台；*AIE* 則更關注評量政策層面；*JPA* 在特殊教育評量領域具有重要地位；*EPM* 是傳統的測量期刊，歷史悠久；*Educational Assessment* 則聚焦於課室評量實務。這些期刊為不同研究取向的學者提供了多元的發表管道。
+
 ## ⭐ 一星級
 
-#### 偏重實務應用
+### 偏重實務應用
 
-此類期刊非常接地氣，專注於解決特定場域中的評量問題，文章強調研究結果的實用性與對實務工作的指導意義。
+此類期刊非常接地氣，專注於解決特定場域中的評量問題，文章強調研究結果的實用性與對實務工作的指導意義。這些期刊特別適合從事應用性研究的學者投稿。
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                             |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | -------------------------------------------------------- |
@@ -77,11 +94,28 @@
 | [International Journal of Testing](https://www.tandfonline.com/journals/hijt20) (IJT) | Taylor & Francis | ITC  | 4期 (約 20-25篇) |          | 國際測驗委員會（ITC）的官方期刊，刊登所有測驗相關面向的研究。 | 跨文化測驗・測量不變性・科技化評量・測驗改編・公平性     |
 | [*Educational Measurement: Issues and Practice*](https://onlinelibrary.wiley.com/journal/17453992) (EMIP) | Wiley            | NCME | 4期 (約 20-25篇) |          | 旨在促進對教育測量的更佳理解，並鼓勵負責任地使用測驗與評量。 | AI與自動評分・形成性評量・評量公平性・效度研究・標準設定 |
 
-#### 跨領域與觀點
+**評述：** 這三本期刊都具有明確的實務導向。*AME* 專注於教育測量的實際應用，特別歡迎能直接改善教育實務的研究；*IJT* 作為ITC的官方期刊，在國際測驗標準制定方面具有重要影響力；*EMIP* 則以其可讀性強、實務性高的文章著稱，是測驗實務工作者的重要參考來源。
 
-此類期刊提供一個獨特的平台，鼓勵對測量本質的哲學思辨以及與其他學科的交叉對話，視角廣泛而深刻。
+### 跨領域與觀點
+
+此類期刊提供一個獨特的平台，鼓勵對測量本質的哲學思辨以及與其他學科的交叉對話，視角廣泛而深刻。這類期刊特別適合進行理論反思或跨學科研究的學者。
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                     | 近五年重要主題（五個關鍵詞）                           |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | -------------------------------------------- | ------------------------------------------------------ |
-| [Measurement: Interdisciplinary Research and Perspectives](https://www.tandfonline.com/journals/hmir20) (MIRP) | Taylor & Francis | -    | 4期 (約 15-20篇) | Bayes    | 強調測量的跨學科性質，促進不同領域間的對話。 | 認知診斷模型・貝氏測量・跨學科應用・測量哲學・質性測量 |
+| [Measurement: Interdisciplinary Research and Perspectives](https://www.tandfonline.com/journals/hmir20) (MIRP) | Taylor & Francis | -    | 4期 (約 15-20篇) | Bayes    | 強調測量的跨學科性質，促進不同領域間的對話。 | 認知診斷模式・貝氏測量・跨學科應用・測量哲學・質性測量 |
 
+**評述：** *MIRP* 是一本相當獨特的期刊，它不僅關注測量的技術層面，更重視測量的哲學與理論基礎。該期刊鼓勵跨學科的對話與合作，特別歡迎從不同學科角度探討測量問題的研究。對於想要進行理論創新或跨領域研究的學者而言，這是一個很好的平台。
+
+---
+
+## 總結與投稿建議
+
+1. **理論導向研究者**：建議優先考慮第一部分的三星級期刊，特別是 *Psychometrika* 和 *BMSP*。
+
+2. **應用導向研究者**：可將重點放在第二部分的二星級期刊，如 *APM*、*JEDM* 等。
+
+3. **新進研究者**：建議從一星級期刊開始累積發表經驗，再逐步挑戰更高層級的期刊。
+
+4. **跨領域研究者**：*MIRP* 和 *BRM* 提供了獨特的發表機會。
+
+5. **政策研究者**：*AIE* 和 *EMIP* 特別適合關注評量政策與實務改革的研究。
