--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -25,7 +25,7 @@
 | [*Psychometrika*](https://www.cambridge.org/core/journals/psychometrika) (P11A) | Cambridge        | Psychometric Society | 4期 (約 40-50篇) | IRT, Bayes, NP, RT | 致力於將心理學發展為一門定量理性科學，是心理計量學理論發展的殿堂。 | 網路心理計量學・高維度資料・機器學習應用・貝氏方法・試題反應理論 |
 | [*British Journal of Mathematical and Statistical Psychology*](https://bpspsychub.onlinelibrary.wiley.com/journal/20448317) (BMSP) | Wiley            | BPS                  | 3期 (約 20-30篇) | Bayes, RT          | 展示數學與統計心理學的最佳成果，透過數理方法促進心理學理解。 | 貝氏統計・認知模式・網路分析・反應時間模式・縱貫資料分析     |
 | [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學資料收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫資料分析・機器學習方法・遺漏資料・測量不變性   |
-| [Structural Equation Modeling](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
+| [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
 | [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
 
 **評述：** 這五本期刊堪稱心理計量學的「五大天王」，代表該領域的最高學術水準。*Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱；*Psychological Methods* 是APA體系中方法學的旗艦期刊；而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
@@ -70,15 +70,22 @@
 
 此類期刊是評量領域的核心，涵蓋從測驗開發、效度驗證到評量政策等廣泛議題，是多數應用型研究者的主要投稿目標。這些期刊在學術品質與實務相關性之間取得良好平衡。
 
+Measurement.
+
+| 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
+| ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| [*Applied Psychological Measurement*](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模式・測驗連結・電腦化適性測驗・個人適配度 |
+| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模式 |
+| [*Assessment in Education: Principles, Policy & Practice*](https://www.tandfonline.com/journals/caie20) (AIE) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 關注評量的原則、政策與實務，以及它們之間的相互關係。         | 評量政策・形成性評量・學生中心評量・績效責任・促進學習的評量 |
+
+Assessment.
+
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測驗應用   |
-| [Applied Psychological Measurement](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模式・測驗連結・電腦化適性測驗・個人適配度 |
-| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模式 |
-| [Assessment in Education: Principles, Policy & Practice](https://www.tandfonline.com/journals/caie20) (AIE) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 關注評量的原則、政策與實務，以及它們之間的相互關係。         | 評量政策・形成性評量・學生中心評量・績效責任・促進學習的評量 |
-| [Journal of Psychoeducational Assessment](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
-| [Educational and Psychological Measurement](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
-| [Educational Assessment](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
+| [*Journal of Psychoeducational Assessment*](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
+| [*Educational and Psychological Measurement*](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
+| [*Educational Assessment*](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
 
 **評述：** 這組期刊構成了評量研究的主力軍，各有其特色定位。*EJPA* 代表歐洲觀點，在跨文化研究方面特別強勢；*APM* 和 *JEDM* 是IRT研究者的重要平台；*AIE* 則更關注評量政策層面；*JPA* 在特殊教育評量領域具有重要地位；*EPM* 是傳統的測量期刊，歷史悠久；*Educational Assessment* 則聚焦於課室評量實務。這些期刊為不同研究取向的學者提供了多元的發表管道。
 
@@ -90,8 +97,8 @@
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                             |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | -------------------------------------------------------- |
-| [Applied Measurement in Education](https://www.tandfonline.com/journals/hame20) (AME) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 刊登聚焦於測量在教育情境中應用的學術論文，強調解決實際的教育問題。 | 測驗公平性(DIF)・考生動機・測驗連結・課室評量・實作評量  |
-| [International Journal of Testing](https://www.tandfonline.com/journals/hijt20) (IJT) | Taylor & Francis | ITC  | 4期 (約 20-25篇) |          | 國際測驗委員會（ITC）的官方期刊，刊登所有測驗相關面向的研究。 | 跨文化測驗・測量不變性・科技化評量・測驗改編・公平性     |
+| [*Applied Measurement in Education*](https://www.tandfonline.com/journals/hame20) (AME) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 刊登聚焦於測量在教育情境中應用的學術論文，強調解決實際的教育問題。 | 測驗公平性(DIF)・考生動機・測驗連結・課室評量・實作評量  |
+| [*International Journal of Testing*](https://www.tandfonline.com/journals/hijt20) (IJT) | Taylor & Francis | ITC  | 4期 (約 20-25篇) |          | 國際測驗委員會（ITC）的官方期刊，刊登所有測驗相關面向的研究。 | 跨文化測驗・測量不變性・科技化評量・測驗改編・公平性     |
 | [*Educational Measurement: Issues and Practice*](https://onlinelibrary.wiley.com/journal/17453992) (EMIP) | Wiley            | NCME | 4期 (約 20-25篇) |          | 旨在促進對教育測量的更佳理解，並鼓勵負責任地使用測驗與評量。 | AI與自動評分・形成性評量・評量公平性・效度研究・標準設定 |
 
 **評述：** 這三本期刊都具有明確的實務導向。*AME* 專注於教育測量的實際應用，特別歡迎能直接改善教育實務的研究；*IJT* 作為ITC的官方期刊，在國際測驗標準制定方面具有重要影響力；*EMIP* 則以其可讀性強、實務性高的文章著稱，是測驗實務工作者的重要參考來源。
@@ -102,7 +109,7 @@
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                     | 近五年重要主題（五個關鍵詞）                           |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | -------------------------------------------- | ------------------------------------------------------ |
-| [Measurement: Interdisciplinary Research and Perspectives](https://www.tandfonline.com/journals/hmir20) (MIRP) | Taylor & Francis | -    | 4期 (約 15-20篇) | Bayes    | 強調測量的跨學科性質，促進不同領域間的對話。 | 認知診斷模式・貝氏測量・跨學科應用・測量哲學・質性測量 |
+| [*Measurement: Interdisciplinary Research and Perspectives*](https://www.tandfonline.com/journals/hmir20) (MIRP) | Taylor & Francis | -    | 4期 (約 15-20篇) | Bayes    | 強調測量的跨學科性質，促進不同領域間的對話。 | 認知診斷模式・貝氏測量・跨學科應用・測量哲學・質性測量 |
 
 **評述：** *MIRP* 是一本相當獨特的期刊，它不僅關注測量的技術層面，更重視測量的哲學與理論基礎。該期刊鼓勵跨學科的對話與合作，特別歡迎從不同學科角度探討測量問題的研究。對於想要進行理論創新或跨領域研究的學者而言，這是一個很好的平台。
 
