--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -24,11 +24,8 @@
 | ------------------------------------------------------------ | ---------------- | -------------------- | ---------------- | ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Psychometrika*](https://www.cambridge.org/core/journals/psychometrika) (P11A) | Cambridge        | Psychometric Society | 4期 (約 40-50篇) | IRT, Bayes, NP, RT | 致力於將心理學發展為一門定量理性科學，是心理計量學理論發展的殿堂。 | 網路心理計量學・高維度資料・機器學習應用・貝氏方法・試題反應理論 |
 | [*British Journal of Mathematical and Statistical Psychology*](https://bpspsychub.onlinelibrary.wiley.com/journal/20448317) (BMSP) | Wiley            | BPS                  | 3期 (約 20-30篇) | Bayes, RT          | 展示數學與統計心理學的最佳成果，透過數理方法促進心理學理解。 | 貝氏統計・認知模式・網路分析・反應時間模式・縱貫資料分析     |
-| [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學資料收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫資料分析・機器學習方法・遺漏資料・測量不變性   |
-| [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
-| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
 
-**評述：** 這五本期刊堪稱心理計量學的「五大天王」，代表該領域的最高學術水準。*Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱；*Psychological Methods* 是APA體系中方法學的旗艦期刊；而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
+**評述：** *Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱。
 
 ### 偏重方法與軟體
 
@@ -37,8 +34,11 @@
 | 期刊 (縮寫)                                                  | 出版社   | 學會                | 年發行量           | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | -------- | ------------------- | ------------------ | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Behavior Research Methods*](https://link.springer.com/journal/13428) (BRM) | Springer | Psychonomic Society | 6期 (約 180-240篇) | RT       | 刊登實驗心理學研究的方法、技術與工具性論文，特別強調電腦科技在研究中的應用。 | AI/機器學習・自然語言處理・R/Python套件・資料視覺化・線上實驗 |
+| [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學資料收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫資料分析・機器學習方法・遺漏資料・測量不變性   |
 
-**評述：** *BRM* 在方法學期刊中具有獨特地位，它不僅是篇數最多的期刊之一，更是程式開發者和工具創建者的首選平台。該期刊特別歡迎附有開源程式碼的投稿，對於想要推廣自己開發的統計套件或研究工具的學者而言，這是最佳的發表平台。近年來隨著開放科學運動的興起，該期刊的重要性持續提升。
+
+
+**評述：** *BRM* 在方法學期刊中具有獨特地位，它不僅是篇數最多的期刊之一，更是程式開發者和工具創建者的首選平台。該期刊特別歡迎附有開源程式碼的投稿，對於想要推廣自己開發的統計套件或研究工具的學者而言，這是最佳的發表平台。近年來隨著開放科學運動的興起，該期刊的重要性持續提升。*Psychological Methods* 是APA體系中方法學的旗艦期刊。
 
 ### 理論與實務並重
 
@@ -47,8 +47,12 @@
 | 期刊 (縮寫)                                                  | 出版社 | 學會       | 年發行量         | 個人關注  | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ------ | ---------- | ---------------- | --------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模式論文，強調文章的及時性與長期影響力。 | 認知診斷模式・教育中的因果推論・AI/機器學習應用・多層次模式・貝氏網路 |
+| [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
+| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
 
-**評述：** *JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。
+
+
+**評述：** *JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
 
 ---
 
