--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -14,7 +14,7 @@
 
 這部分專門收錄那些更側重**統計理論、計量模式、方法學創新**的期刊，是計量領域的理論核心。這些期刊通常對數學統計的嚴謹性要求極高，適合具備深厚統計背景的研究者投稿。
 
-## ⭐⭐⭐ 三星級 (頂級理論與高影響力期刊)
+## ⭐⭐⭐ 三星級 
 
 ### 偏重理論創新
 
@@ -49,10 +49,14 @@
 | [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模式論文，強調文章的及時性與長期影響力。 | 認知診斷模式・教育中的因果推論・AI/機器學習應用・多層次模式・貝氏網路 |
 | [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
 | [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
-
+| [*Educational and Psychological Measurement*](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
 
 
 **評述：** *JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
+
+
+
+
 
 ---
 
@@ -88,7 +92,6 @@ Assessment.
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測驗應用   |
 | [*Journal of Psychoeducational Assessment*](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
-| [*Educational and Psychological Measurement*](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
 | [*Educational Assessment*](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
 
 **評述：** 這組期刊構成了評量研究的主力軍，各有其特色定位。*EJPA* 代表歐洲觀點，在跨文化研究方面特別強勢；*APM* 和 *JEDM* 是IRT研究者的重要平台；*AIE* 則更關注評量政策層面；*JPA* 在特殊教育評量領域具有重要地位；*EPM* 是傳統的測量期刊，歷史悠久；*Educational Assessment* 則聚焦於課室評量實務。這些期刊為不同研究取向的學者提供了多元的發表管道。
